--- a/app/templates/firmen.hbs
+++ b/app/templates/firmen.hbs
@@ -1,37 +1,35 @@
-<div class="content-img">
-    <img src="../assets/images/firmen_01.png"
-            title="Quelle: https://static.pexels.com/photos/234394/pexels-photo-234394.jpeg"/>
-</div>
+<div class="content-img firmen"></div>
 
-<div class="content-text">
-    <div class="content-text-text">
-        <h1>Unternehmen und Vereine</h1>
-        <p>Für Sie und Ihr Unternehmen verstehen wir uns als kompetenter Partner in folgenden Leistungen.</p>
-        <div>
-            <ul style="float: left;">
-                <li>Gründungsberatung</li>
-                <li>Finanzbuchhaltung</li>
-                <li>Lohn</li>
-                <li>Jahresabschlüsse</li>
-                <li>Steuererklärungen</li>
-                <li>Außenprüfung</li>
-            </ul>
-            <ul style="float: left; margin-left: 20px;">
-                <li>Wirtschaftlichkeitsprüfung</li>
-                <li>Unternehmensanalyse</li>
-                <li>Unternehmensnachfolge</li>
-                <li>Finanzierung</li>
-                <li>Controlling</li>
-            </ul>
-        </div>
-    </div>
+<div class="content-scroll">
+	<div class="scrollable">
+		<h1>Unternehmen und Vereine</h1>
+		<p>Für Sie und Ihr Unternehmen verstehen wir uns als kompetenter Partner in folgenden Leistungen.</p>
+		<div>
+			<ul style="float: left;">
+				<li>Gründungsberatung</li>
+				<li>Finanzbuchhaltung</li>
+				<li>Lohn</li>
+				<li>Jahresabschlüsse</li>
+				<li>Steuererklärungen</li>
+				<li>Außenprüfung</li>
+			</ul>
+			<ul style="float: left; margin-left: 20px;">
+				<li>Wirtschaftlichkeitsprüfung</li>
+				<li>Unternehmensanalyse</li>
+				<li>Unternehmensnachfolge</li>
+				<li>Finanzierung</li>
+				<li>Controlling</li>
+			</ul>
+		</div>
+		<br/>
+		<br/>
+		<br/>
+	</div>
 
-    <div class="content-footer">
-      {{#link-to 'leistungen'}}
-          <p>Leistungen</p>
-      {{/link-to}}
-      {{#link-to 'privat' class="content-footer-text-right"}}
-          <p>Privatkunden</p>
-      {{/link-to}}
-    </div>
+	<div class="content-footer">
+		<div class="content-footer-content">
+			{{#link-to 'leistungen'}}Leistungen{{/link-to}}
+			{{#link-to 'privat' class="content-footer-text-right"}}Privatkunden{{/link-to}}
+		</div>
+	</div>
 </div>
