--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,26 +1,21 @@
-<div class="content-img">
-    <img src="../assets/images/kanzlei_01.png"
-         title="Quelle: https://static.pexels.com/photos/34601/pexels-photo.jpg"/>
-</div>
+<div class="content-img kanzlei"></div>
 
-<div class="content-text">
-    <div class="content-text-text">
-        <h1>Willkommen in unserer Kanzlei</h1>
+<div class="content-scroll">
+	<div class="scrollable">
+		<h1>Willkommen in unserer Kanzlei</h1>
+		<p>Wir sind eine Steuerberatungskanzlei mit Sitz im schönen Leutkirch im Allgäu.</p>
+		<p>Nutzen Sie unsere Homepage, um sich einen Überblick über unser Team und unserer individuellen Leistungen
+			für Sie zu verschaffen. Über Ihren ersten Besuch und ein persönliches Kennenlernen (bei einem Kaffee) freuen
+			wir uns selbstverständlich.</p>
+		<br/>
+		<br/>
+		<br/>
+	</div>
 
-
-        <p>Wir sind eine Steuerberatungskanzlei mit Sitz im schönen Leutkirch im Allgäu.</p>
-        <p>Nutzen Sie unsere Homepage, um sich einen Überblick über unser Team und unserer individuellen Leistungen
-            für Sie zu verschaffen.</p>
-        <p>Über Ihren ersten Besuch und ein persönliches Kennenlernen (bei einem Kaffee) freuen
-            wir uns selbstverständlich.</p>
-    </div>
-
-    <div class="content-footer">
-      {{#link-to 'kontakt'}}
-          <p>Kontakt</p>
-      {{/link-to}}
-      {{#link-to 'leistungen' class="content-footer-text-right"}}
-          <p>Leistungen</p>
-      {{/link-to}}
-    </div>
+	<div class="content-footer">
+		<div class="content-footer-content">
+			{{#link-to 'kontakt'}}Kontakt{{/link-to}}
+			{{#link-to 'leistungen' class="content-footer-text-right"}}Leistungen{{/link-to}}
+		</div>
+	</div>
 </div>
