--- a/app/templates/jobs.hbs
+++ b/app/templates/jobs.hbs
@@ -1,28 +1,23 @@
-<div class="content-img">
-    <img src="../assets/images/jobs_01.png"
-         title="Quelle: https://static.pexels.com/photos/24193/pexels-photo.jpg"/>
-</div>
+<div class="content-img jobs"></div>
 
-<div class="content-text">
-    <div class="content-text-text">
-        <h1>Stellenangebot</h1>
+<div class="content-scroll">
+	<div class="scrollable">
+		<h1>Stellenangebot</h1>
+		<p>Wir suchen derzeit für unsere Kanzlei</p>
 
-        <p>Wir suchen</p>
-        <p><b>eine/n Steuerfachgehilfe/in</b> oder</p>
-        <p><b>eine/n Steuerfachangestellte/n</b></p>
+		<ul>
+			<li><b>eine/n Steuerfachgehilfe/in</b> oder <b>eine/n Steuerfachangestellte/n</b></li>
+		</ul>
+		<p>für die Erstellung von Steuererklärungen, Jahresabschlüssen und Finanzbuchhaltungen.</p>
+		<br/>
+		<br/>
+		<br/>
+	</div>
 
-        <p>für die Erstellung von Steuererklärungen,
-            Jahresabschlüssen und Finanzbuchhaltungen</p>
-
-        <p>Bewerbungen richten Sie bitte an unsere Kanzlei.</p>
-    </div>
-
-    <div class="content-footer">
-      {{#link-to 'ueberuns'}}
-          <p>Über Uns</p>
-      {{/link-to}}
-      {{#link-to 'team' class="content-footer-text-right"}}
-          <p>Das Team</p>
-      {{/link-to}}
-    </div>
+	<div class="content-footer">
+		<div class="content-footer-content">
+			{{#link-to 'ueberuns'}}Über Uns{{/link-to}}
+			{{#link-to 'team' class="content-footer-text-right"}}Das Team{{/link-to}}
+		</div>
+	</div>
 </div>
