--- a/app/templates/kontaktformular.hbs
+++ b/app/templates/kontaktformular.hbs
@@ -1,11 +1,8 @@
-<div class="content-img">
-    <img src="../assets/images/kontaktformular_01.png"
-         title="Quelle: https://static.pexels.com/photos/234394/pexels-photo-234394.jpeg"/>
-</div>
+<div class="content-img kontaktformular"></div>
 
 <div class="content-scroll">
-    <div class="scrollable">
-              <h1>Kontaktformular</h1>
-              {{contact-form}}
-    </div>
+	<div class="scrollable">
+		<h1>Kontaktformular</h1>
+		{{contact-form}}
+	</div>
 </div>
