--- a/app/templates/leistungen.hbs
+++ b/app/templates/leistungen.hbs
@@ -1,29 +1,27 @@
-<div class="content-img">
-    <img src="../assets/images/leistungen_01.png"
-            title="Quelle: https://static.pexels.com/photos/53621/calculator-calculation-insurance-finance-53621.jpeg"/>
-</div>
+<div class="content-img leistungen"></div>
 
-<div class="content-text">
-    <div class="content-text-text">
-        <h1>Tätigkeitenschwerpunkte</h1>
-        <ul>
-            <li>Gestaltungsberatung</li>
-            <li>Existenzgründungsberatung</li>
-            <li>Betriebswirtschaftliche Beratung in jeder Form</li>
-            <li>Unternehmenssanierungen</li>
-            <li>Beratung bei Unternehmenskauf und –verkauf</li>
-            <li>Jahresabschlüsse und Steuererklärungen</li>
-            <li>Lohn- und Finanzbuchhaltung</li>
-            <li>Erbschaften und Schenkungen</li>
-        </ul>
-    </div>
+<div class="content-scroll">
+	<div class="scrollable">
+		<h1>Tätigkeitenschwerpunkte</h1>
+		<ul>
+			<li>Gestaltungsberatung</li>
+			<li>Existenzgründungsberatung</li>
+			<li>Betriebswirtschaftliche Beratung in jeder Form</li>
+			<li>Unternehmenssanierungen</li>
+			<li>Beratung bei Unternehmenskauf und –verkauf</li>
+			<li>Jahresabschlüsse und Steuererklärungen</li>
+			<li>Lohn- und Finanzbuchhaltung</li>
+			<li>Erbschaften und Schenkungen</li>
+		</ul>
+		<br/>
+		<br/>
+		<br/>
+	</div>
 
-    <div class="content-footer">
-      {{#link-to 'firmen'}}
-          <p>Firmenkunden</p>
-      {{/link-to}}
-      {{#link-to 'privat' class="content-footer-text-right"}}
-          <p>Privatkunden</p>
-      {{/link-to}}
-    </div>
+	<div class="content-footer">
+		<div class="content-footer-content">
+			{{#link-to 'firmen'}}Firmenkunden{{/link-to}}
+			{{#link-to 'privat' class="content-footer-text-right"}}Privatkunden{{/link-to}}
+		</div>
+	</div>
 </div>
