--- a/app/templates/mandanten.hbs
+++ b/app/templates/mandanten.hbs
@@ -1,21 +1,24 @@
-<div class="content-img">
-    <img src="../assets/images/mandanten_01.png"
-         title="Quelle: https://static.pexels.com/photos/30744/pexels-photo-30744.jpg"/>
-</div>
+<div class="content-img mandanten"></div>
 
-<div class="content-text">
-    <div class="content-text-text">
-        <h1>Mandantenbereich</h1>
+<div class="content-scroll">
+	<div class="scrollable">
+		<h1>Mandantenbereich</h1>
+		<p>Wir veröffentlichen hier unsere monatliche Übersicht für unsere Mandanten.</p>
+		<br/>
+		<a target="_blank" href="https://drive.google.com/file/d/1_cLTmxR9DvnSie33U5ydFYOeciq44n36/view?usp=sharing">
+			<img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="130"/>
+			<p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
+			<p style="margin-left: 130px;">Ausgabe: Januar 2018</p>
+		</a>
+		<br/>
+		<br/>
+		<br/>
+	</div>
 
-        <p>Wird bearbeitet...</p>
-    </div>
-
-    <div class="content-footer">
-      {{#link-to 'informationen'}}
-          <p>Informationen</p>
-      {{/link-to}}
-      {{#link-to 'unterstuetzung' class="content-footer-text-right"}}
-          <p>Unterstützung</p>
-      {{/link-to}}
-    </div>
+	<div class="content-footer">
+		<div class="content-footer-content">
+			{{#link-to 'informationen'}}Informationen{{/link-to}}
+			{{#link-to 'unterstuetzung' class="content-footer-text-right"}}Unterstützung{{/link-to}}
+		</div>
+	</div>
 </div>
