--- a/app/templates/ueberuns.hbs
+++ b/app/templates/ueberuns.hbs
@@ -1,21 +1,18 @@
-<div class="content-img">
-    <img src="../assets/images/ueberuns_01.png"
-            title="Quelle: https://static.pexels.com/photos/2170/creative-desk-pens-school.jpg"/>
-</div>
+<div class="content-img ueberuns"></div>
 
-<div class="content-text">
-    <div class="content-text-text">
-        <h1>Über Uns</h1>
+<div class="content-scroll">
+	<div class="scrollable">
+		<h1>Über Uns</h1>
+		<p>Wird bearbeitet...</p>
+		<br/>
+		<br/>
+		<br/>
+	</div>
 
-        <p>Wird bearbeitet...</p>
-    </div>
-
-    <div class="content-footer">
-      {{#link-to 'team'}}
-          <p>Das Team</p>
-      {{/link-to}}
-      {{#link-to 'jobs' class="content-footer-text-right"}}
-          <p>Jobangebote</p>
-      {{/link-to}}
-    </div>
+	<div class="content-footer">
+		<div class="content-footer-content">
+			{{#link-to 'team'}}Das Team{{/link-to}}
+			{{#link-to 'jobs' class="content-footer-text-right"}}Jobangebote{{/link-to}}
+		</div>
+	</div>
 </div>
