--- a/app/templates/unterstuetzung.hbs
+++ b/app/templates/unterstuetzung.hbs
@@ -1,22 +1,18 @@
-<div class="content-img">
-    <img src="../assets/images/unterstuetzung_01.png"
-            title="Quelle: https://static.pexels.com/photos/34204/pexels-photo.jpg"/>
+<div class="content-img ueberuns"></div>
 
-</div>
+<div class="content-scroll">
+	<div class="scrollable">
+		<h1>Unterstützung</h1>
+		<p>Wird bearbeitet...</p>
+		<br/>
+		<br/>
+		<br/>
+	</div>
 
-<div class="content-text">
-    <div class="content-text-text">
-        <h1>Unterstützung</h1>
-
-        <p>Wird bearbeitet...</p>
-    </div>
-
-    <div class="content-footer">
-      {{#link-to 'mandanten'}}
-          <p>Mandanten</p>
-      {{/link-to}}
-      {{#link-to 'informationen' class="content-footer-text-right"}}
-          <p>Informationen</p>
-      {{/link-to}}
-    </div>
+	<div class="content-footer">
+		<div class="content-footer-content">
+			{{#link-to 'mandanten'}}Mandanten{{/link-to}}
+			{{#link-to 'informationen' class="content-footer-text-right"}}Informationen{{/link-to}}
+		</div>
+	</div>
 </div>
