--- a/app/templates/kanzlei.hbs
+++ b/app/templates/kanzlei.hbs
@@ -1,28 +1,22 @@
-<div class="content-img">
-    <img src="../assets/images/kanzlei_01.png"
-         title="Quelle: https://static.pexels.com/photos/34601/pexels-photo.jpg"/>
-</div>
+<div class="content-img kanzlei"></div>
 
-<div class="content-text">
-    <div class="content-text-text">
-      <h1>Willkommen in unserer Kanzlei</h1>
+<div class="content-scroll">
+	<div class="scrollable">
+		<h1>Willkommen in unserer Kanzlei</h1>
 
+		<p>Wir sind eine Steuerberatungskanzlei mit Sitz im schönen Leutkirch im Allgäu.</p>
+		<p>Nutzen Sie unsere Homepage, um sich einen Überblick über unser Team und unserer individuellen Leistungen
+			für Sie zu verschaffen. Über Ihren ersten Besuch und ein persönliches Kennenlernen (bei einem Kaffee) freuen
+			wir uns selbstverständlich.</p>
+		<br/>
+		<br/>
+		<br/>
+	</div>
 
-      <p>Wir sind eine Steuerberatungskanzlei mit Sitz im schönen Leutkirch im Allgäu.</p>
-      <p>Nutzen Sie unsere Homepage, um sich einen Überblick über unser Team und unserer individuellen Leistungen
-          für Sie zu verschaffen.</p>
-      <p>Über Ihren ersten Besuch und ein persönliches Kennenlernen (bei einem Kaffee) freuen
-          wir uns selbstverständlich.</p>
-      </div>
-
-
-  <div class="content-footer">
-      {{#link-to 'philosophie'}}
-        <p>Philosophie</p>
-      {{/link-to}}
-      {{#link-to 'service' class="content-footer-text-right"}}
-          <p>Service</p>
-      {{/link-to}}
-  </div>
-
+	<div class="content-footer">
+		<div class="content-footer-content">
+			{{#link-to 'ueberuns'}}Über Uns{{/link-to}}
+			{{#link-to 'team' class="content-footer-text-right"}}Das Team{{/link-to}}
+		</div>
+	</div>
 </div>
