--- a/app/templates/privat.hbs
+++ b/app/templates/privat.hbs
@@ -1,28 +1,24 @@
-<div class="content-img">
-    <img src="../assets/images/privat_01.png"
-            title="https://static.pexels.com/photos/28216/pexels-photo.jpg"/>
-</div>
+<div class="content-img privat"></div>
 
-<div class="content-text">
-    <div class="content-text-text">
-        <h1>Privatpersonen</h1>
+<div class="content-scroll">
+	<div class="scrollable">
+		<h1>Privatpersonen</h1>
+		<p>Für Sie als Privatperson bieten wir unter anderem folgende Leistungen an.</p>
+		<ul>
+			<li>Einkommensteuererklärung</li>
+			<li>Erbschaft- und Schenkungsteuererklärung</li>
+			<li>Gestaltende Steuerberatung</li>
+			<li>Internationales Steuerrecht</li>
+		</ul>
+		<br/>
+		<br/>
+		<br/>
+	</div>
 
-        <p>Für Sie als Privatperson bieten wir unter anderem folgende Leistungen an.</p>
-
-        <ul>
-            <li>Einkommensteuererklärung</li>
-            <li>Erbschaft- und Schenkungsteuererklärung</li>
-            <li>Gestaltende Steuerberatung</li>
-            <li>Internationales Steuerrecht</li>
-        </ul>
-    </div>
-
-    <div class="content-footer">
-      {{#link-to 'leistungen'}}
-          <p>Leistungen</p>
-      {{/link-to}}
-      {{#link-to 'firmen' class="content-footer-text-right"}}
-          <p>Firmenkunden</p>
-      {{/link-to}}
-    </div>
+	<div class="content-footer">
+		<div class="content-footer-content">
+			{{#link-to 'leistungen'}}Leistungen{{/link-to}}
+			{{#link-to 'firmen' class="content-footer-text-right"}}Firmenkunden{{/link-to}}
+		</div>
+	</div>
 </div>
