--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -21,9 +21,9 @@
 		}
 
 		img {
-			width: 80px;
-			height: 80px;
-			margin: 10px 0 0 0;
+			width: 76px;
+			height: 76px;
+			margin: 12px;
 		}
 	}
 
