--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,8 @@ body {
 	background-image: url('../assets/images/background_01.jpg');
 	background-size: 100% 100%;
 	background-attachment: fixed;
+	font-family: "Times New Roman", Times, serif;
+	position: fixed;
 	left: 0;
 	top: 0;
 }
@@ -73,11 +75,11 @@ a:hover {
 }
 
 .top {
-	height: 25.5%;
+	height: 24.5%;
 }
 
 .center {
-	height: 60%;
+	height: 62%;
 	background-color: rgba(255, 255, 255, 0.3);
 	display: flex;
 	flex-direction: row;
@@ -104,7 +106,7 @@ a:hover {
 	flex-direction: row;
 	justify-content: space-between;
 	height: 100%;
-	padding: 1.5% 1.55%;
+	padding: 1.2% 1.35%;
 }
 
 .content-text {
@@ -168,7 +170,7 @@ a:hover {
 }
 
 .content-img {
-	width: 30%;
+	width: 100%;
 	height: 100%;
 	flex: 1 1;
 	border: solid 2px rgb(155, 166, 194);
@@ -368,14 +370,6 @@ a:hover {
 		display: none;
 	}
 
-	.left {
-		width: 5%;
-	}
-
-	.content {
-		width: 90%;
-	}
-
 	.header-right {
 		display: none;
 	}
@@ -398,9 +392,46 @@ a:hover {
 
 @media screen and (max-height: 600px) {
 	.top {
-		height: 20%;
+		height: 19%;
 	}
 	.center {
-		height: 72%;
+		height: 74%;
+	}
+	.address {
+		display: none;
+	}
+
+	.header {
+		height: 70px;
+
+		.header-left img {
+			width: 70px;
+			height: 70px;
+			margin: 0;
+		}
+
+		.header-pages {
+			top: 20px;
+		}
+
+		.content {
+			flex: 16;
+		}
+	}
+
+	.impressum {
+		display: none;
+	}
+}
+
+@media screen and (max-height: 500px) {
+	.top {
+		height: 21%;
+	}
+}
+
+@media screen and (max-height: 400px) {
+	.top {
+		height: 23%;
 	}
 }
