--- a/app/templates/firmen.hbs
+++ b/app/templates/firmen.hbs
@@ -5,7 +5,7 @@
 		<h1>Unternehmen und Vereine</h1>
 		<p>Für Sie und Ihr Unternehmen verstehen wir uns als kompetenter Partner in folgenden Leistungen.</p>
 		<div>
-			<ul style="float: left;">
+			<ul style="float: left; margin-right: 20px;">
 				<li>Gründungsberatung</li>
 				<li>Finanzbuchhaltung</li>
 				<li>Lohn</li>
@@ -13,7 +13,7 @@
 				<li>Steuererklärungen</li>
 				<li>Außenprüfung</li>
 			</ul>
-			<ul style="float: left; margin-left: 20px;">
+			<ul style="float: left;">
 				<li>Wirtschaftlichkeitsprüfung</li>
 				<li>Unternehmensanalyse</li>
 				<li>Unternehmensnachfolge</li>
