--- a/app/templates/impressum.hbs
+++ b/app/templates/impressum.hbs
@@ -35,5 +35,13 @@
 		<p><b>Haftungshinweis:</b></p>
 		<p>Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links. Für den
 			Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.</p>
+		<br/>
+	</div>
+
+	<div class="content-footer">
+		<div class="content-footer-content">
+			{{#link-to 'kanzlei'}}Kanzlei{{/link-to}}
+			{{#link-to 'kontakt' class="content-footer-text-right"}}Kontakt{{/link-to}}
+		</div>
 	</div>
 </div>
