--- a/app/templates/pages.hbs
+++ b/app/templates/pages.hbs
@@ -1,5 +1,5 @@
-<div class="content-text">
-	<div class="pages">
+<div class="content-scroll">
+	<div class="scrollable">
 		<h1>Unsere Mobile Webseite</h1>
 		<table>
 			<tr>
@@ -28,5 +28,14 @@
 				<td>{{#link-to 'kontaktformular'}}<a href="">Kontaktformular</a>{{/link-to}}</td>
 			</tr>
 		</table>
+		<br/>
+		<br/>
+		<br/>
+	</div>
+	<div class="content-footer">
+		<div class="content-footer-content">
+			{{#link-to 'kanzlei'}}Kanzlei{{/link-to}}
+			{{#link-to 'kontakt' class="content-footer-text-right"}}Kontakt{{/link-to}}
+		</div>
 	</div>
 </div>
