--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -5,10 +5,11 @@
 	background-color: white;
 	position: fixed;
 	top: 0;
+	line-height: 18px;
 
 	a {
 		font-size: 20px;
-		margin-right: 35px;
+		margin-right: 38px;
 	}
 
 	.header-left {
@@ -55,7 +56,7 @@
 				font-size: 14px;
 				padding-top: 2px;
 				margin-left: 10px;
-				color: grey;
+				color: $color_secondary;
 			}
 
 			a:link {
@@ -65,22 +66,21 @@
 	}
 
 	.childLink {
-		padding-top: 2px;
+		padding-top: 4px;
 	}
 
 	.childLink a {
 		font-size: 14px;
-		margin-right: 10px;
 	}
 
 	.childLink a:link {
 		text-decoration: none;
-		color: grey;
+		color: $color_secondary;
 	}
 
 	.childLink a:visited {
 		text-decoration: underline;
-		color: grey;
+		color: $color_secondary;
 	}
 
 	.childLink a:active {
@@ -90,7 +90,7 @@
 
 	.childLink a:hover {
 		text-decoration: underline;
-		color: #002174;
+		color: $color_highlight_primary;
 	}
 
 	.very-small {
