--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,7 +4,8 @@ body {
 	background-image: url('../assets/images/background_01.jpg');
 	background-size: 100% 100%;
 	background-attachment: fixed;
-	font-family: "Times New Roman", Times, serif;
+	font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial, sans-serifserif;
+	color: $color_primary;
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -20,21 +21,20 @@ ul {
 }
 
 h1 {
-	padding: 0 20px 5px 4%;
+	padding: 0 20px 5px 2%;
 	margin-top: 0;
 	font-size: 1.2rem;
-	color: #000000;
 }
 
 p {
-	padding-left: 4%;
+	padding-left: 2%;
 	margin: 5px 0 5px 0;
 	line-height: 1.2rem;
 }
 
 table {
 	width: 100%;
-	padding-left: 4%;
+	padding-left: 2%;
 }
 
 td {
@@ -44,17 +44,18 @@ td {
 	p {
 		margin: 0;
 		padding: 0;
+		white-space: nowrap;
 	}
 }
 
 a:link {
 	text-decoration: none;
-	color: #000000;
+	color: $color_primary;
 }
 
 a:visited {
 	text-decoration: underline;
-	color: #000000;
+	color: $color_primary;
 }
 
 a:active {
@@ -124,7 +125,7 @@ a:hover {
 }
 
 .captcha {
-	margin-left: 4%;
+	margin-left: 2%;
 }
 
 .content-footer {
@@ -136,7 +137,7 @@ a:hover {
 	align-items: flex-end;
 	display: flex;
 	justify-content: space-between;
-	padding-left: 4%;
+	padding-left: 2%;
 	padding-right: 0;
 	margin-right: 0;
 	float: left;
@@ -167,13 +168,15 @@ a:hover {
 	width: 68%;
 	overflow: hidden;
 	position: relative;
+	border-left: 2px solid #efefef;
+	margin-left: 1.4%;
 }
 
 .content-img {
 	width: 100%;
 	height: 100%;
 	flex: 1 1;
-	border: solid 2px rgb(155, 166, 194);
+	border: solid 2px $color_highlight_secondary;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -207,6 +210,7 @@ a:hover {
 	left: 0;
 	right: 0; /* Increase/Decrease this value for cross-browser compatibility */
 	overflow-y: scroll;
+	padding-right: 2%;
 }
 
 .scrollable::-webkit-scrollbar {
@@ -325,8 +329,17 @@ a:hover {
 		padding-left: 0;
 	}
 
+	table:not(.contact) {
+		padding-left: 0;
+
+		td{
+			display:block; width:100%;
+		}
+	}
+
 	.content-footer {
 		padding-left: 0;
+		padding-bottom: 1%;
 	}
 
 	.content-img {
@@ -339,6 +352,8 @@ a:hover {
 
 	.content-scroll {
 		width: 100%;
+		border-left: none;
+		margin: 1%;
 	}
 }
 
