--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -10,6 +10,9 @@
 		<div class="right"></div>
 	</div>
 	<div class="bottom">
+		<div class="datenschutz">
+			{{#link-to 'datenschutz'}}<a href="">Datenschutzerklärung</a>{{/link-to}}
+		</div>
 		<div class="impressum">
 			{{#link-to 'impressum'}}<a href="">Impressum</a>{{/link-to}}
 		</div>
