--- a/app/templates/kanzlei.hbs
+++ b/app/templates/kanzlei.hbs
@@ -11,11 +11,12 @@
 		<br/>
 		<br/>
 		<br/>
+		<br/>
 	</div>
 
 	<div class="content-footer">
 		<div class="content-footer-content">
-			{{#link-to 'ueberuns'}}Über Uns{{/link-to}}
+			{{#link-to 'kontakt'}}Kontakt{{/link-to}}
 			{{#link-to 'team' class="content-footer-text-right"}}Das Team{{/link-to}}
 		</div>
 	</div>
