--- a/app/templates/team.hbs
+++ b/app/templates/team.hbs
@@ -49,10 +49,10 @@
 			</tr>
 			<tr>
 				<td>
-					<p><b>Alexandra Steurer</b></p>
-					<p>Steuerfachangestellte</p>
-					<p>07561/ 84899 32</p>
-					<p>A.Steurer@Steuerberater-Grieser.de</p>
+					<p><b>Peter Straub</b></p>
+					<p>Steuerfachangestellter</p>
+					<p>07561/ 84899 45</p>
+					<p>P.Straub@Steuerberater-Grieser.de</p>
 				</td>
 				<td>
 					<p><b>Tanja Gredler</b></p>
