--- a/app/templates/mandanten.hbs
+++ b/app/templates/mandanten.hbs
@@ -6,9 +6,27 @@
 		<p>Wir veröffentlichen hier unsere monatliche Übersicht für unsere Mandanten.</p>
 		<br/>
 		<a target="_blank" href="https://drive.google.com/file/d/1_cLTmxR9DvnSie33U5ydFYOeciq44n36/view?usp=sharing">
-			<img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="130"/>
+			<img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
 			<p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
 			<p style="margin-left: 130px;">Ausgabe: Januar 2018</p>
+		</a>
+		<br/>
+		<a target="_blank" href="https://drive.google.com/file/d/1-8QVNh5sbEjMx4A95fQ02vk3_FgUp7Ew/view?usp=sharing">
+			<img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
+			<p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
+			<p style="margin-left: 130px;">Ausgabe: Februar 2018</p>
+		</a>
+		<br/>
+		<a target="_blank" href="https://drive.google.com/file/d/1T8yNVwmQrjIxeWbeVT6I1tdnzAzN7u53/view?usp=sharing">
+			<img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
+			<p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
+			<p style="margin-left: 130px;">Ausgabe: März 2018</p>
+		</a>
+		<br/>
+		<a target="_blank" href="https://drive.google.com/file/d/1mLOV8CMT6xhZld-R1PEIiYpBNn5cJ9NZ/view?usp=sharing">
+			<img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
+			<p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
+			<p style="margin-left: 130px;">Ausgabe: April 2018</p>
 		</a>
 		<br/>
 		<br/>
