--- a/app/templates/informationen.hbs
+++ b/app/templates/informationen.hbs
@@ -1,9 +1,9 @@
-<div class="content-img informationen"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Informationen</h1>
-		{{rss-feed}}
+    <p>Aktuelle Nachrichten und Informationen zu Steuern und Recht:</p> <!--(Quelle: <a href="https://www.datev.de/">www.datev.de</a>):</p-->
+		  {{!rss-feed}}
+    <p><b>Unser RSS-Feed ist aufgrund der DSGVO vorläufig deaktiviert.</b></p>
 	</div>
 
 	<div class="content-footer">
@@ -13,3 +13,5 @@
 		</div>
 	</div>
 </div>
+
+{{image-container image='informationen'}}
