--- a/app/templates/kanzlei.hbs
+++ b/app/templates/kanzlei.hbs
@@ -1,11 +1,8 @@
-<div class="content-img kanzlei"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
-		<h1>Willkommen in unserer Kanzlei</h1>
-
+    <h1>Willkommen in unserer Kanzlei</h1>
 		<p>Wir sind eine Steuerberatungskanzlei mit Sitz im schönen Leutkirch im Allgäu.</p>
-		<p>Nutzen Sie unsere Homepage, um sich einen Überblick über unser Team und unserer individuellen Leistungen
+		<p>Nutzen Sie unsere Homepage, um sich einen Überblick über unser Team und unsere individuellen Leistungen
 			für Sie zu verschaffen. Über Ihren ersten Besuch und ein persönliches Kennenlernen (bei einem Kaffee) freuen
 			wir uns selbstverständlich.</p>
 		<br/>
@@ -21,3 +18,5 @@
 		</div>
 	</div>
 </div>
+
+{{image-container image='service'}}
