--- a/app/templates/karte.hbs
+++ b/app/templates/karte.hbs
@@ -1,8 +1,17 @@
-{{#g-map lat=47.8268542 lng=10.0173844 zoom=14 as |context| }}
+{{!--#g-map lat=47.8268542 lng=10.0173844 zoom=14 as |context| }}
 	{{#g-map-infowindow context lat=47.8268542 lng=10.0173844}}
 		<h2>Steuerbüro Josef Grieser</h2>
 		<p>Bahnhof 11</p>
 		<p>88299 Leutkirch</p>
 		<p>Telefon: 07561/912234</p>
 	{{/g-map-infowindow}}
-{{/g-map}}
+{{/g-map--}}
+
+<div style="background-image: url('../assets/images/karte_zoomout.png');
+height: 100%;
+background-size: 1000px auto;
+background-attachment: fixed;
+    background-position: center;
+width: 100%;
+"></div>
+
