--- a/app/templates/mandanten.hbs
+++ b/app/templates/mandanten.hbs
@@ -1,34 +1,45 @@
-<div class="content-img mandanten"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Mandantenbereich</h1>
 		<p>Wir veröffentlichen hier unsere monatliche Übersicht für unsere Mandanten.</p>
 		<br/>
-		<a target="_blank" href="https://drive.google.com/file/d/1_cLTmxR9DvnSie33U5ydFYOeciq44n36/view?usp=sharing">
+    <a href='../assets/blitzlicht/201801 - Blitzlicht.pdf' download>
 			<img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
 			<p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
 			<p style="margin-left: 130px;">Ausgabe: Januar 2018</p>
 		</a>
 		<br/>
-		<a target="_blank" href="https://drive.google.com/file/d/1-8QVNh5sbEjMx4A95fQ02vk3_FgUp7Ew/view?usp=sharing">
+    <a href='../assets/blitzlicht/201802 - Blitzlicht.pdf' download>
 			<img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
 			<p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
 			<p style="margin-left: 130px;">Ausgabe: Februar 2018</p>
 		</a>
 		<br/>
-		<a target="_blank" href="https://drive.google.com/file/d/1T8yNVwmQrjIxeWbeVT6I1tdnzAzN7u53/view?usp=sharing">
+    <a href='../assets/blitzlicht/201803 - Blitzlicht.pdf' download>
 			<img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
 			<p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
 			<p style="margin-left: 130px;">Ausgabe: März 2018</p>
 		</a>
 		<br/>
-		<a target="_blank" href="https://drive.google.com/file/d/1mLOV8CMT6xhZld-R1PEIiYpBNn5cJ9NZ/view?usp=sharing">
-			<img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
-			<p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
-			<p style="margin-left: 130px;">Ausgabe: April 2018</p>
-		</a>
-		<br/>
+    <a href='../assets/blitzlicht/201804 - Blitzlicht.pdf' download>
+      <img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
+      <p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
+      <p style="margin-left: 130px;">Ausgabe: April 2018</p>
+    </a>
+    <br/>
+    <a href='../assets/blitzlicht/201805 - Blitzlicht.pdf' download>
+      <img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
+      <p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
+      <p style="margin-left: 130px;">Ausgabe: Mai 2018</p>
+    </a>
+    <br/>
+    <a href='../assets/blitzlicht/201806 - Blitzlicht.pdf' download>
+      <img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
+      <p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
+      <p style="margin-left: 130px;">Ausgabe: Juni 2018</p>
+    </a>
+    <br/>
+    <br/>
 		<br/>
 		<br/>
 	</div>
@@ -40,3 +51,5 @@
 		</div>
 	</div>
 </div>
+
+{{image-container image='mandanten'}}
