--- a/app/templates/pages.hbs
+++ b/app/templates/pages.hbs
@@ -1,5 +1,5 @@
 <div class="content-scroll">
-	<div class="scrollable">
+  <div class="scrollable">
 		<h1>Unsere Mobile Webseite</h1>
 		<table>
 			<tr>
@@ -24,11 +24,12 @@
 			</tr>
 			<tr>
 				<td><b>{{#link-to 'kontakt'}}<a href="">Kontakt</a>{{/link-to}}</b></td>
-				<td>{{#link-to 'karte'}}<a href="">Karte Anfahrt</a>{{/link-to}}</td>
-				<td>{{#link-to 'kontaktformular'}}<a href="">Kontaktformular</a>{{/link-to}}</td>
+				<td>{{#link-to 'karte'}}<a href="">Karte</a>{{/link-to}}</td>
+				{{!--<td>{{#link-to 'kontaktformular'}}<a href="">Kontaktformular</a>{{/link-to}}</td>--}}
 			</tr>
 		</table>
-		<br/>
+    <br/>
+    <br/>
 		<br/>
 		<br/>
 	</div>
@@ -39,3 +40,5 @@
 		</div>
 	</div>
 </div>
+
+{{image-container image='service'}}
