--- a/app/templates/service.hbs
+++ b/app/templates/service.hbs
@@ -1,5 +1,3 @@
-<div class="content-img service"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Unser Angebot</h1>
@@ -21,3 +19,5 @@
 		</div>
 	</div>
 </div>
+
+{{image-container image='kanzlei'}}
