--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -1,8 +1,9 @@
 .header {
 	width: 100%;
-	height: 100px;
-	border-bottom: solid 2px #002174;
+	height: 101px;
+	border-bottom: solid 1px #002174;
 	background-color: white;
+  padding-left: 13px;
 	position: fixed;
 	top: 0;
 	line-height: 18px;
@@ -47,15 +48,16 @@
 
 		.header-contact {
 			height: 60.667px;
-			margin-top: 18px;
+			margin-top: 19px;
 			margin-bottom: 18px;
-			border-left: solid 2px #002174;
+			border-left: solid 1px #EBECE9;
 
 			p {
 				height: 13px;
 				font-size: 14px;
 				padding-top: 2px;
-				margin-left: 10px;
+        padding-left: 0;
+				margin-left: 4px;
 				color: $color_secondary;
 			}
 
