--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,14 +1,15 @@
 body {
 	margin: 0;
 	padding: 0;
-	background-image: url('../assets/images/background_01.jpg');
 	background-size: 100% 100%;
 	background-attachment: fixed;
 	font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial, sans-serifserif;
 	color: $color_primary;
-	position: fixed;
+	position: absolute;
 	left: 0;
 	top: 0;
+  height: 100%;
+  width: 100%;
 }
 
 * {
@@ -21,9 +22,11 @@ ul {
 }
 
 h1 {
-	padding: 0 20px 5px 2%;
-	margin-top: 0;
+	padding: 6px;
+	margin: 6px 6px 12px 6px;
 	font-size: 1.2rem;
+  font-weight: normal;
+  border-left: 1px solid #EBECE9;
 }
 
 h2 {
@@ -33,7 +36,7 @@ h2 {
 }
 
 p {
-	padding-left: 2%;
+	padding-left: 14px;
 	margin: 5px 0 5px 0;
 	line-height: 1.2rem;
 }
@@ -48,8 +51,6 @@ td {
 	padding-bottom: 14px;
 
 	p {
-		margin: 0;
-		padding: 0;
 		white-space: nowrap;
 	}
 }
@@ -104,7 +105,7 @@ a:hover {
 	height: 100%;
 	float: left;
 	background-color: white;
-	border: solid 2px #002174;
+	border: solid 1px #002174;
 	flex: 4.667;
 }
 
@@ -113,7 +114,7 @@ a:hover {
 	flex-direction: row;
 	justify-content: space-between;
 	height: 100%;
-	padding: 1.2% 1.35%;
+	padding: 6px 6px;
 }
 
 .content-text {
@@ -143,8 +144,7 @@ a:hover {
 	align-items: flex-end;
 	display: flex;
 	justify-content: space-between;
-	padding-left: 2%;
-	padding-right: 0;
+	padding-left: 0;
 	margin-right: 0;
 	float: left;
 	flex: 1;
@@ -152,7 +152,7 @@ a:hover {
 
 .content-footer-content {
 	width: 100%;
-	border-bottom: solid 2px rgb(155, 166, 194);
+	border-bottom: solid 1px rgb(155, 166, 194);
 }
 
 .content-footer a {
@@ -171,18 +171,23 @@ a:hover {
 .content-scroll {
 	float: left;
 	height: 100%;
-	width: 68%;
+	width: 66%;
 	overflow: hidden;
 	position: relative;
-	border-left: 2px solid #ebebeb;
-	margin-left: 1.4%;
+  margin-right: 6px;
+}
+
+.content-img-container {
+  width: 33%;
+  height: 100%;
+  padding: 6px;
+  border: solid 1px #EBECE9;
 }
 
 .content-img {
 	width: 100%;
 	height: 100%;
 	flex: 1 1;
-	border: solid 2px $color_highlight_secondary;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -199,25 +204,29 @@ a:hover {
 
 .impressum {
 	position: fixed;
-	right: 10px;
-	bottom: 10px;
+	right: 30px;
+	bottom: 30px;
 }
 
 .impressum a {
+  padding: 4px;
+  background-color: rgba(255, 255, 255, 0.15);
 	color: white;
-	font-size: 20px;
+	font-size: 14px;
 	text-align: center;
 }
 
 .datenschutz {
 	position: fixed;
 	right: 130px;
-	bottom: 10px;
+	bottom: 30px;
 }
 
 .datenschutz a {
+  padding: 4px;
+  background-color: rgba(255, 255, 255, 0.15);
 	color: white;
-	font-size: 20px;
+	font-size: 14px;
 	text-align: center;
 }
 
@@ -228,7 +237,7 @@ a:hover {
 	left: 0;
 	right: 0; /* Increase/Decrease this value for cross-browser compatibility */
 	overflow-y: scroll;
-	padding-right: 2%;
+	padding-right: 6px;
 }
 
 .scrollable::-webkit-scrollbar {
