--- a/app/templates/firmen.hbs
+++ b/app/templates/firmen.hbs
@@ -1,5 +1,3 @@
-<div class="content-img firmen"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Unternehmen und Vereine</h1>
@@ -33,3 +31,5 @@
 		</div>
 	</div>
 </div>
+
+{{image-container image='firmen'}}
