--- a/app/templates/impressum.hbs
+++ b/app/templates/impressum.hbs
@@ -1,5 +1,3 @@
-<div class="content-img service"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Impressum</h1>
@@ -48,3 +46,5 @@
 		</div>
 	</div>
 </div>
+
+{{image-container image='service'}}
