--- a/app/templates/jobs.hbs
+++ b/app/templates/jobs.hbs
@@ -1,5 +1,3 @@
-<div class="content-img jobs"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Stellenangebot</h1>
@@ -21,3 +19,5 @@
 		</div>
 	</div>
 </div>
+
+{{image-container image='jobs'}}
