--- a/app/templates/kontakt.hbs
+++ b/app/templates/kontakt.hbs
@@ -1,5 +1,3 @@
-<div class="content-img kontakt"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Kontaktinformationen</h1>
@@ -43,7 +41,9 @@
 	<div class="content-footer">
 		<div class="content-footer-content">
 			{{#link-to 'karte'}}Anfahrt{{/link-to}}
-			{{#link-to 'kontaktformular' class="content-footer-text-right"}}Kontaktformular{{/link-to}}
+			{{#link-to 'kanzlei' class="content-footer-text-right"}}Kanzlei{{/link-to}}
 		</div>
 	</div>
 </div>
+
+{{image-container image='kontakt'}}
