--- a/app/templates/kontaktformular.hbs
+++ b/app/templates/kontaktformular.hbs
@@ -1,8 +1,8 @@
-<div class="content-img kontaktformular"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Kontaktformular</h1>
 		{{contact-form}}
 	</div>
 </div>
+
+{{image-container image='kontaktformular'}}
