--- a/app/templates/leistungen.hbs
+++ b/app/templates/leistungen.hbs
@@ -1,5 +1,3 @@
-<div class="content-img leistungen"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Tätigkeitenschwerpunkte</h1>
@@ -25,3 +23,5 @@
 		</div>
 	</div>
 </div>
+
+{{image-container image='leistungen'}}
