--- a/app/templates/philosophie.hbs
+++ b/app/templates/philosophie.hbs
@@ -1,5 +1,3 @@
-<div class="content-img philosophie crop"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Unsere Philosophie</h1>
@@ -22,3 +20,5 @@
 		</div>
 	</div>
 </div>
+
+{{image-container image='philosophie crop'}}
