--- a/app/templates/privat.hbs
+++ b/app/templates/privat.hbs
@@ -1,5 +1,3 @@
-<div class="content-img privat"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Privatpersonen</h1>
@@ -22,3 +20,5 @@
 		</div>
 	</div>
 </div>
+
+{{image-container image='privat'}}
