--- a/app/templates/team.hbs
+++ b/app/templates/team.hbs
@@ -1,5 +1,3 @@
-<div class="content-img team"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Das Team</h1>
@@ -213,3 +211,5 @@
 		</div>
 	</div>
 </div>
+
+{{image-container image='team'}}
