--- a/app/templates/ueberuns.hbs
+++ b/app/templates/ueberuns.hbs
@@ -1,5 +1,3 @@
-<div class="content-img ueberuns"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Über Uns</h1>
@@ -16,3 +14,5 @@
 		</div>
 	</div>
 </div>
+
+{{image-container image='ueberuns'}}
