--- a/app/templates/unterstuetzung.hbs
+++ b/app/templates/unterstuetzung.hbs
@@ -1,5 +1,3 @@
-<div class="content-img ueberuns"></div>
-
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Unterstützung</h1>
@@ -16,3 +14,5 @@
 		</div>
 	</div>
 </div>
+
+{{image-container image='unterstuetzung'}}
